# gamelauncher

./: PKGBUILD  README.md  meson.build
data/: gamelauncher.css  gamelauncher.desktop
src/: Application.vala  DesktopEntries.vala
